--- a/src/App.css
+++ b/src/App.css
@@ -10,10 +10,12 @@ html{
   background-size: cover;
   background-color: rgba(0, 0, 0, 0.733);
   background-blend-mode: multiply;
+  overflow-x: hidden;
 }
 
 h1{
   font-family: "Prompt", sans-serif;
+  font-size: 4em;
 }
 
 h2{
@@ -26,6 +28,9 @@ h4{
   font-size: 1.5rem
 }
 
+.custom-shadow{
+  box-shadow: 0 0 12px 2px rgba(163, 3, 3, 0.411);
+}
 
 .hero-info > h4::after{
   height: 1px;
