--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,15 @@ html{
   overflow-x: hidden;
 }
 
+button{
+  cursor: pointer;
+}
+
+
+h1.main-title{
+  font-size: 8em;
+  font-weight: 600;
+}
 h1{
   font-family: "Prompt", sans-serif;
   font-size: 4em;
@@ -32,6 +41,35 @@ h4{
   box-shadow: 0 0 12px 2px rgba(163, 3, 3, 0.411);
 }
 
+.open-hero-list{
+  font-size: 2.5em;
+  font-weight: 300;
+}
+
+.btn-blue, .btn-danger, .btn-yellow{
+  color: white;
+}
+
+.btn-blue{
+  background: #2C6CCC;
+}
+
+.btn-blue:hover{
+  background: #1f5ab1;
+}
+.btn-danger{
+  background: #E54444;
+}
+.btn-danger:hover{
+  background: #d32d2d;
+}
+.btn-yellow{
+  background: #F1C32D;
+}
+.btn-yellow:hover{
+  background: #e2b318;
+}
+
 .hero-info > h4::after{
   height: 1px;
   width: 50%;
@@ -41,6 +79,84 @@ h4{
   transform: translateX(50%);
   display: flex;
   border-bottom: dashed black 4px;
+}
+
+.input-search-character{
+  background: white;
+  border-radius: 3px;
+  border: solid 3px gray;
+  padding: 1px 5px;
+}
+
+.search-hero-results{
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+  
+  li:not(:last-child, :first-child){
+    border-bottom: 2px rgba(0, 0, 0, 0.288) solid;
+  }
+  li:not(:first-child){
+    cursor: pointer;
+    background-color: transparent;
+    padding: 3px 5px;
+    border-radius: 3px;
+    transition: background-color 0.25s ease-in, color 0.25s ease-in;
+  }
+
+  li:not(:first-child):hover{
+    background-color: rgb(68, 68, 182);
+    color: white;
+  }
+
+  :first-child{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: center;
+    p{
+      font-size: 1.25em;
+      font-weight: 600;
+      width: fit-content;
+      padding: 0 10px;
+      border-bottom: 3px rgba(0, 0, 0, 0.267) solid;
+    }
+  }
+}
+
+.hero-origin{
+  h3{
+    text-align: center;
+  }
+  textarea{
+    border: 3px solid rgba(0, 0, 0, 0.281);
+    border-radius: 5px;
+    padding: 5px;
+    width: 97%;
+  }
+  textarea:focus{
+    border-color: #1f5ab1;
+    outline: none;
+  }
+}
+
+.hero-abilities{
+  input{
+    border-radius: 5px;
+    padding: 0 5px;
+    width: 100%;
+    border: 3px solid rgba(0, 0, 0, 0.281);
+  }
+  input:focus{
+    border-color: #1f5ab1;
+    outline: none;
+  }
+
+  li{
+    border: solid 3px #3b87eb;
+    padding: 1px 15px;
+    border-radius: 3rem;
+  }
 }
 
 .loader {
