--- a/src/App.css
+++ b/src/App.css
@@ -87,8 +87,10 @@ h4{
     padding: 0 8px;
     border: 2px solid #2C6CCC;
     border-radius: 2rem;
+    
   }
 }
+
 
 .hero-info > h4::after{
   height: 1px;
@@ -160,6 +162,10 @@ h4{
   }
 }
 
+
+.set-ability{
+  border: 2px solid #F1C32D;
+}
 .hero-abilities{
   input{
     border-radius: 5px;
@@ -176,6 +182,15 @@ h4{
     border: solid 3px #3b87eb;
     padding: 1px 15px;
     border-radius: 3rem;
+    transition: box-shadow 0.5s ease-in;
+    cursor: pointer;
+  }
+  li.selected{
+    border-color: #F1C32D;
+  }
+  li:hover{
+    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.322);
+
   }
 }
 
