--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,22 @@ button{
 h1.main-title{
   font-size: 8em;
   font-weight: 600;
+  animation: title 1s ease-in-out
 }
+
+@keyframes title{
+  0%{
+    transform: scale(0.85);
+    opacity: 0.5;
+  }
+  75%{
+    transform: scale(1);
+  }
+  100%{
+    opacity: 1;
+  }
+}
+
 h1{
   font-family: "Prompt", sans-serif;
   font-size: 4em;
@@ -44,6 +59,19 @@ h4{
 .open-hero-list{
   font-size: 2.5em;
   font-weight: 300;
+  animation: shadow 2s infinite ease-in-out;
+}
+
+@keyframes shadow {
+  0%{
+    box-shadow: 0 0 4px 2px rgba(255, 255, 255, 0.199);
+  }
+  50%{
+    box-shadow: 0 0 4px 3px rgba(255, 255, 255, 0.301);
+  }
+  100%{
+    box-shadow: 0 0 4px 2px rgba(255, 255, 255, 0.199);
+  }
 }
 
 .hero-card{
@@ -161,6 +189,7 @@ h4{
     outline: none;
   }
 }
+
 
 
 .set-ability{
