--- a/src/App.css
+++ b/src/App.css
@@ -21,16 +21,12 @@ button{
 h1.main-title{
   font-size: 8em;
   font-weight: 600;
-  animation: title 1s ease-in-out
+  animation: title 0.5s ease-in-out
 }
 
 @keyframes title{
   0%{
-    transform: scale(0.85);
     opacity: 0.5;
-  }
-  75%{
-    transform: scale(1);
   }
   100%{
     opacity: 1;
@@ -105,6 +101,10 @@ h4{
 }
 .btn-yellow:hover{
   background: #e2b318;
+}
+
+.border-danger{
+  border: solid 2px #E54444;
 }
 
 .hero-item-abilitites {
