--- a/src/App.css
+++ b/src/App.css
@@ -85,6 +85,10 @@ h4{
 .hero-card:hover{
   box-shadow: 0 0 14px 5px rgba(211, 3, 3, 0.411);
 }
+.hero-origin{
+  word-break: break-all;
+
+}
 
 .btn-blue, .btn-danger, .btn-yellow{
   color: white;
